@@ -277,8 +277,8 @@ class JHtmlBootstrapTest extends TestCase
 	public function testEndTabSet()
 	{
 		$this->assertThat(
-						JHtml::_('bootstrap.endTabSet'),
-						$this->equalTo('</div>')
+			JHtml::_('bootstrap.endTabSet'),
+			$this->equalTo("\n</div>")
 		);
 	}
 
@@ -302,8 +302,8 @@ class JHtmlBootstrapTest extends TestCase
 	public function testEndTab()
 	{
 		$this->assertThat(
-						JHtml::_('bootstrap.endTab'),
-						$this->equalTo('</div>')
+			JHtml::_('bootstrap.endTab'),
+			$this->equalTo("\n</div>")
 		);
 	}
 
@@ -328,7 +328,7 @@ class JHtmlBootstrapTest extends TestCase
 	{
 		$this->assertThat(
 			JHtml::_('bootstrap.endTabSet'),
-			$this->equalTo('</div>')
+			$this->equalTo("\n</div>")
 		);
 	}
 
@@ -353,7 +353,7 @@ class JHtmlBootstrapTest extends TestCase
 	{
 		$this->assertThat(
 			JHtml::_('bootstrap.endTab'),
-			$this->equalTo('</div>')
+			$this->equalTo("\n</div>")
 		);
 	}
 
